con menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>  
         <a href="pages/form-login.html"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
       </div>
-      <nav> 
+      <button id="abrir" class="abrir-menu"><img src="img/menu.png" alt=""></button>
+      <nav class="nav" id="nav"> 
+        <button id="cerrar" class="cerrar-menu"><img src="img/cerrar.png" alt=""></button>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="pages/inscripciones.html" target="_self">Inscribite</a></li>
@@ -160,5 +162,6 @@
       </div>
     </footer>
     <script src="js/script.js"></script>
+    <script src="js/menuresponsive.js"></script>
   </body>
 </html>
