--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -17,7 +17,9 @@
         </div>  
         <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
       </div>
-      <nav>
+      <button id="abrir" class="abrir-menu"><img src="../img/menu.png" alt=""></button>
+      <nav class="nav" id="nav"> 
+        <button id="cerrar" class="cerrar-menu"><img src="../img/cerrar.png" alt=""></button>
         <ul>
           <li><a href="../index.html" target="_self">Inicio</a></li>
           <li><a href="inscripciones.html">Inscribite</a></li>
@@ -217,6 +219,7 @@
         </div>
       </div>
     </footer>
+    <script src="../js/menuresponsive.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper(".mySwiper", {
