--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -16,7 +16,9 @@
       </div>  
       <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
     </div>
-    <nav>
+    <button id="abrir" class="abrir-menu"><img src="../img/menu.png" alt=""></button>
+      <nav class="nav" id="nav"> 
+        <button id="cerrar" class="cerrar-menu"><img src="../img/cerrar.png" alt=""></button>
       <ul>
         <li><a href="../index.html" target="_self">Inicio</a></li>
         <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
@@ -835,6 +837,7 @@
       </div>
     </div>
   </footer>
+  <script src="../js/menuresponsive.js"></script>
   <script src="../js/popup.js"></script>
   </body>
 </html>
