--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,9 @@
             </div>  
             <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
           </div>
-        <nav>
+          <button id="abrir" class="abrir-menu"><img src="../img/menu.png" alt=""></button>
+          <nav class="nav" id="nav"> 
+            <button id="cerrar" class="cerrar-menu"><img src="../img/cerrar.png" alt=""></button>
             <ul>
                 <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
@@ -58,7 +60,6 @@
             <div>
                 <input type="submit" value="Enviar" class="button">
             </div>
-            
         </form>
     </main>
     <footer>
@@ -82,5 +83,6 @@
             </div>
         </div>
       </footer>
-</body>
+      <script src="../js/menuresponsive.js"></script>
+    </body>
 </html>
