--- a/pages/form-alumno.html
+++ b/pages/form-alumno.html
@@ -16,7 +16,9 @@
             </div>  
             <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
           </div>
-        <nav>
+          <button id="abrir" class="abrir-menu"><img src="../img/menu.png" alt=""></button>
+          <nav class="nav" id="nav"> 
+            <button id="cerrar" class="cerrar-menu"><img src="../img/cerrar.png" alt=""></button>
             <ul>
                 <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
@@ -26,105 +28,93 @@
         </nav>
     </header>
     <main>
-        <form class="alumnos_adiest">
+        <form id="alumnos_adiest">
             <h2>Formulario de registro de alumnos</h2>
             <fieldset class="recuadro">
-            <legend>Datos personales</legend>
-            <div class="dato_u">
-        <label for="nombre_u">Nombre:</label>
-        <input size="20" type="text" id="nombre_u" name="nombre_u" placeholder="Ingrese su nombre aquí" required/>
-    </div> 
-    <br>
-    <div class="dato_u">
-        <label for="apellido_u">Apellido:</label>
-        <input size="20" type="text" id="apellido_u" name="apellido_u" placeholder="Ingrese su apellido aquí" required/>
-    </div> 
-    <br>
-    <div class="dato_u">
-        <label for="birthday_u">Fecha de Nacimiento:</label>
-        <input type="date" name="birthday_u" required>
-    </div> 
-    <br>
-    <div class="dato_u">
-        <label for="genero_u">Genero:</label>
-        <input type="radio" name="genero_u" id="genero_u" value="Masculino" required> Masculino
-        <input type="radio" name="genero_u" id="genero_u" value="Femenino"> Femenino
-        <input type="radio" name="genero_u" id="genero_u" value="Otro"> Otro
-    </div> 
-    <br>
-    <div class="dato_u">
-        <label for="direccion_u">Dirección:</label>
-        <input type="text" id="direccion_u" name="direccion_u" placeholder="Ingrese su direccion aquí" required/>
-    </div>  
-    <br>
-
-    <div class="dato_u">
-        <label for="ciudad_u">Ciudad:</label>
-        <input type="text" id="ciudad_u" name="ciudad_u" placeholder="Ingrese su ciudad aquí" required/>
-    </div>  
-    <br>
-
-    <div class="dato_u">
-        <label for="zipcode_u">Codigo Postal:</label>
-        <input size="30" type="text" id="zipcode_u" name="zipcode_u" placeholder="Ingrese su código postal aquí" required/>
-    </div>  
-    <br>
-    <div class="dato_u">
-        <label for="mail_u">Correo electrónico:</label>
-        <input size="50" type="number" id="mail_u" name="mail_u" placeholder="Ingrese su correo electrónico aquí 'ejemplo@mail.com'" required/>
-    </div>     
-    <br>
-    <div class="dato_u">
-        <label for="telefono_u">Teléfono:</label>
-        <input type="tel" id="telefono_u" name="telefono_u" placeholder="Ingrese su telefono aquí" required/>
-    </div> 
-</fieldset>
-
-<fieldset class="recuadro">
-    <legend>Cree su cuenta</legend>
-    <div class="dato_u">
-        <label for="usuario_u">Usuario:</label>
-        <input size="30" type="text" id="usuario_u" name="usuario_u" placeholder="Ingrese un usuario" required/>
-<br>
-<br>
-        <label for="contraseña_u">Contraseña:</label>
-        <input size="30" type="password" id="contraseña_u" name="contraseña_u" placeholder="Ingrese una contraseña aquí" required/>
-<br>
-<br>
-        <label for="contraseña2_u">Repita su contraseña:</label>
-        <input size="30" type="password" id="contraseña2_u" name="contraseña2_u" placeholder="Confirme su contraseña aquí" required/>
-<br>
-
-    </div> 
-</fieldset>
-
-<br>
-<div class="enviar">
-    <input type="submit" value="Enviar" class="button">
-    <input type="reset" value="Limpiar" class="button">
-</div>
-    </form>
-</main>
-<footer>
-    <div class="datos">
-      <h3>Contactanos</h3>
-      <p>Lavalle 1334 - CABA</p>
-      <p><i>consultas@iacan.com</i></p>
-    </div>
-    <div class="links">
-      <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
-      <a href="adiestradores.html">Adiestradores</a>
-      <a href="contacto.html" target="_blank">Contacto</a>
-    </div>
-    <div class="red">
-      <h4>Nuestras Redes Sociales</h4>
-      <div>
-        <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-        <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
-        <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-        <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
-      </div>
-    </div>
-  </footer>
+                <legend>Datos personales</legend>
+                <div class="dato_u">
+                    <label for="nombre_u">Nombre:</label>
+                    <input size="20" type="text" id="nombre_u" name="nombre_u" placeholder="Ingrese su nombre aquí" required/>
+                </div> 
+                <br>
+                <div class="dato_u">
+                    <label for="apellido_u">Apellido:</label>
+                    <input size="20" type="text" id="apellido_u" name="apellido_u" placeholder="Ingrese su apellido aquí" required/>
+                </div> 
+                <br>
+                <div class="dato_u">
+                    <label for="age_u">Edad:</label>
+                    <input type="number" id="age_u" name="age_u" required>
+                </div> 
+                <br>
+                <div class="dato_u">
+                    <label for="genero_u">Genero:</label>
+                    <input type="radio" name="genero_u" id="genero_u" value="Masculino" required> Masculino
+                    <input type="radio" name="genero_u" id="genero_u" value="Femenino"> Femenino
+                    <input type="radio" name="genero_u" id="genero_u" value="Otro"> Otro
+                </div> 
+                <br>
+                <div class="dato_u">
+                    <label for="ciudad_u">Ciudad:</label>
+                    <input type="text" id="ciudad_u" name="ciudad_u" placeholder="Ingrese su ciudad aquí" required/>
+                </div>  
+                <br>
+                <div class="dato_u">
+                    <label for="mail_u">Correo electrónico:</label>
+                    <input size="50" type="mail" id="mail_u" name="mail_u" placeholder="Ingrese su correo electrónico aquí 'ejemplo@mail.com'" required/>
+                </div>     
+                <br>
+                <div class="dato_u">
+                    <label for="telefono_u">Teléfono:</label>
+                    <input type="tel" id="telefono_u" name="telefono_u" placeholder="Ingrese su telefono aquí" required/>
+                </div> 
+            </fieldset>
+            <div id="mensajeError"></div>
+            <fieldset class="recuadro">
+                <legend>Cree su cuenta</legend>
+                <div class="dato_u">
+                    <label for="usuario_u">Usuario:</label>
+                    <input size="30" type="text" id="usuario_u" name="usuario_u" placeholder="Ingrese un usuario" required/>
+                    <br>
+                    <br>
+                    <label for="contraseña_u">Contraseña:</label>
+                    <input size="30" type="password" id="contraseña_u" name="contraseña_u" placeholder="Ingrese una contraseña aquí" required/>
+                    <br>
+                    <br>
+                    <label for="contraseña2_u">Repita su contraseña:</label>
+                    <input size="30" type="password" id="contraseña2_u" name="contraseña2_u" placeholder="Confirme su contraseña aquí" required/>
+                    <br>
+                </div> 
+            </fieldset>
+            <br>
+            <div class="enviar">
+                <button type="submit" value="enviar" class="button">Enviar</button>
+                <input type="reset" value="Limpiar" class="button">
+            </div>
+        </form>
+    </main>
+    <footer>
+        <div class="datos">
+            <h3>Contactanos</h3>
+            <p>Lavalle 1334 - CABA</p>
+            <p><i>consultas@iacan.com</i></p>
+        </div>
+        <div class="links">
+            <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
+            <a href="adiestradores.html">Adiestradores</a>
+            <a href="contacto.html" target="_blank">Contacto</a>
+        </div>
+        <div class="red">
+            <h4>Nuestras Redes Sociales</h4>
+            <div>
+                <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+                <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
+                <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
+                <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+            </div>
+        </div>
+    </footer>
+    <script src="../js/menuresponsive.js"></script>
+    <script src="../js/validacion_alumnos.js"></script>
   </body>
 </html>
