con las validaciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,32 +33,34 @@
             <legend>Datos de Contacto</legend>
             <div class="linea">
                 <label for="nombre">Nombre</label>
-                <input size="20" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre aquí" required>
+                <input size="20" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre aquí">
             </div>
             <br>
             <div class="linea">
                 <label for="apellido">Apellido</label>
-                <input size="20" type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido aquí" required>    
+                <input size="20" type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido aquí">    
             </div>
             <br>
             <div class="linea">
                 <label for="mail">Correo Electrónico</label>
-                <input size="50" type="email" name="mail" id="mail" placeholder="ejemplo@mail.com"required>
+                <input size="50" type="email" name="mail" id="mail" placeholder="ejemplo@mail.com">
             </div>
             <br>
             <div class="linea">
                 <label for="phone">Teléfono</label>
-                <input type="number" name="phone" id="phone" placeholder="Ej 11 5555 5555" required>
+                <input type="number" name="phone" id="phone" placeholder="Ej 11 5555 5555">
             </div>
             <br>
             <div class="linea">
             <label for="msjType">Mensaje</label>
             <br>
-                <textarea id="msjType" cols="30" rows="10" placeholder="Su mensaje" required></textarea>
+                <textarea id="msjType" cols="30" rows="10" placeholder="Su mensaje"></textarea>
             </div>
             </fieldset> 
+            <div id="mensajeError"></div>
+            <div id="mensajeExito"></div>
             <div>
-                <input type="submit" value="Enviar" class="button">
+                <button type="submit" value="enviar" class="button">Enviar</button>
             </div>
         </form>
     </main>
@@ -84,5 +86,6 @@
         </div>
       </footer>
       <script src="../js/menuresponsive.js"></script>
+      <script src="../js/validacion_contacto.js"></script>
     </body>
 </html>
